@@ -6,10 +6,8 @@ import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
 @Setter
 @Getter
@@ -39,44 +37,21 @@ public class Location {
     }
 
     public List<Animal> getAnimals() {
-        return Collections.unmodifiableList(
-                organisms.stream()
-                        .filter(organism -> organism instanceof Animal)
-                        .map(organism -> (Animal) organism)
-                        .collect(Collectors.toList())
-        );
+        return organisms.stream()
+                .filter(organism -> organism instanceof Animal)
+                .map(organism -> (Animal) organism).toList();
     }
 
     public List<Plant> getPlants() {
-        return Collections.unmodifiableList(
-                organisms.stream()
-                        .filter(organism -> organism instanceof Plant)
-                        .map(organism -> (Plant) organism)
-                        .collect(Collectors.toList())
-        );
+        return organisms.stream()
+                .filter(organism -> organism instanceof Plant)
+                .map(organism -> (Plant) organism).toList();
     }
 
-    /**
-     * Проверить, можно ли добавить организм данного вида.
-     */
     public boolean canAddOrganism(Organism organism) {
         long sameTypeCount = organisms.stream()
                 .filter(o -> o.getClass().equals(organism.getClass()))
                 .count();
         return sameTypeCount < organism.getMaxCountPerCell();
-    }
-
-    /**
-     * Удалить всех мертвых организмов.
-     */
-    public synchronized void cleanupDeadOrganisms() {
-        organisms.removeIf(organism -> organism instanceof Animal animal && animal.getActualSatiety() <= 0);
-    }
-
-    /**
-     * Получить количество организмов в клетке.
-     */
-    public int getOrganismCount() {
-        return organisms.size();
     }
 }
